# destream

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
destream_derive/: Cargo.toml
destream_derive/src/: lib.rs
destream_derive/tests/: integration.rs
examples/: fibonacci.rs
src/: de.rs  en.rs  lib.rs
src/de/: impls.rs  mod.rs
src/en/: impls.rs  mod.rs
