[package]
name = "destream"
version = "0.7.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Library for async stream (de)serialization"
repository = "https://github.com/haydnv/destream"
readme = "README.md"

categories = ["asynchronous", "encoding", "parsing", "rust-patterns"]
keywords = ["stream", "streaming", "serialize", "deserialize"]

[dependencies]
async-trait = "0.1"
base64 = "0.21"
bytes = "1.4"
futures = "0.3"
uuid = "1.4"
