[package]
name = "destream"
version = "0.9.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Library for async stream (de)serialization"
repository = "https://github.com/haydnv/destream"
readme = "README.md"

categories = ["asynchronous", "encoding", "parsing", "rust-patterns"]
keywords = ["stream", "streaming", "serialize", "deserialize"]

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[dependencies]
base64 = "0.22"
bytes = "1.5"
futures = "0.3"
smallvec = { version = "1.13", optional = true }
trait-variant = "0.1.2"
uuid = "1.10"
